Implementing basic ui for the admin dashboard
refactoring and enhancing ui of feedback page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  font-family: "Inter", sans-serif;
+  height: 100vh;
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
