--- a/frontend/src/pages/AdminDashboard/feedback.css
+++ b/frontend/src/pages/AdminDashboard/feedback.css
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-=======
+
 .page-title {
   font-size: 28px;
   font-weight: bold;
@@ -7,8 +6,6 @@
   text-align: center;
   margin-bottom: 30px; 
 }
->>>>>>> 54dbdf8 (Implementing basic ui for the admin dashboard)
-
 
 .feedback-container {
   display: flex;
@@ -16,20 +13,13 @@
   align-items: center;
   justify-content: flex-start;
   padding: 40px 20px;
-<<<<<<< HEAD
+
   background-color: #eee; 
   height: 100vh; 
   width: 100%;
   box-sizing: border-box;
   gap:20px;
   overflow-y: auto;
-}
-
-=======
-  background-color: #ffffff; 
-  height: 100vh; 
-  width: 100%;
-  box-sizing: border-box;
 }
 
 .feedback-stats {
@@ -68,30 +58,17 @@
   color: #333;
   padding: 1rem;
 }
->>>>>>> 54dbdf8 (Implementing basic ui for the admin dashboard)
+
 
 .rating-star.filled {
   color: gold;
 }
 
-<<<<<<< HEAD
 .feedback-filters {
   display: flex;
 
   gap: 20px;
   justify-content: center;
-=======
-.total-reviews {
-  font-size: 28px; 
-  font-weight: bold;
-  color: #333;
-}
-
-.feedback-filters {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
->>>>>>> 54dbdf8 (Implementing basic ui for the admin dashboard)
   width: 100%;
   max-width: 800px;
   margin-bottom: 2rem;
@@ -129,11 +106,9 @@
 
 .feedback-list {
   display: flex;
-<<<<<<< HEAD
   flex-wrap: wrap;
   gap: 30px; 
   justify-content: center; 
-=======
   flex-direction: column;
   gap: 1rem;
   width: 100%;
@@ -184,7 +159,9 @@
 
 .feedback-categories div {
   margin-bottom: 0.5rem;
->>>>>>> 54dbdf8 (Implementing basic ui for the admin dashboard)
+  flex-wrap: wrap;
+  gap: 30px; 
+  justify-content: center; 
 }
 
 .no-feedback-container {
@@ -195,11 +172,10 @@
   font-size: 1.5rem;
   color: #777;
 }
-<<<<<<< HEAD
+
 .feedback-card {
   flex: 1 1 calc(50% - 20px);
   box-sizing: border-box;
 
 }
-=======
->>>>>>> 54dbdf8 (Implementing basic ui for the admin dashboard)
+
