--- a/frontend/src/pages/AdminDashboard/flights.css
+++ b/frontend/src/pages/AdminDashboard/flights.css
@@ -111,8 +111,28 @@
 
 .pagination-controls {
   display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  gap: 15px;
+}
+
+.pagination-button {
+  background-color: #007bff;
+  display: flex;
   justify-self: center;
   justify-content: center;
   margin-bottom: 20px;
+  border: white;
   gap: 10px;
 }
+
+.pagination-button:hover {
+  background-color: #0056b3;
+  transform: scale(1.05);
+}
+
+.pagination-button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
