--- a/frontend/src/components/adminDashboard/Archive/flighttable.css
+++ b/frontend/src/components/adminDashboard/Archive/flighttable.css
@@ -1,8 +1,8 @@
 .table-container {
-
   border-radius: 10px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  background-color: #f7f7f7;
   overflow: hidden;
+  justify-items: center;
 }
 
 .flights-table {
