--- a/frontend/src/components/adminDashboard/AdminSidebar/sidebar.css
+++ b/frontend/src/components/adminDashboard/AdminSidebar/sidebar.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-weight: bold;
 }
 
 .ulContainer {
@@ -69,4 +70,8 @@
 
 .deleteSection {
   margin-top: auto;
+}
+
+.logo{
+  margin:auto;
 }
