Add form validation(have an error in disabling arrival date in on-way)

--- a/frontend/src/components/homepage/SearchFlights/style.css
+++ b/frontend/src/components/homepage/SearchFlights/style.css
@@ -33,11 +33,11 @@
   height: 4rem;
 }
 
-#passengersNumber{
+#passengers{
   border-radius: 0 9px 9px 0;
 }
 
-#sourceCountry{
+#source{
   border-radius: 9px 0 0 9px;
 }
 
