Solved the error related to disabling the arrival date on one-way trips

--- a/frontend/src/components/homepage/SearchFlights/style.css
+++ b/frontend/src/components/homepage/SearchFlights/style.css
@@ -44,3 +44,8 @@
 .search-flights-container ::placeholder{
   color: black;
 }
+
+#arrivalDate:disabled {
+  background-color: var(--greyish-white);
+  cursor: not-allowed;
+}
