--- a/frontend/src/components/TicketReservationForm/style.css
+++ b/frontend/src/components/TicketReservationForm/style.css
@@ -10,35 +10,32 @@
   box-sizing: border-box;
 }
 
-/* Custom Scrollbar Styling */
 .inputs-container::-webkit-scrollbar {
-  width: 10px; /* Set the width of the vertical scrollbar */
+  width: 10px;
 }
 
 .inputs-container::-webkit-scrollbar-thumb {
-  background-color: #888; /* Scrollbar thumb color */
-  border-radius: 10px; /* Rounded edges for the scrollbar thumb */
+  background-color: #888;
+  border-radius: 10px;
 }
 
 .inputs-container::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Scrollbar thumb color on hover */
+  background-color: #555;
 }
 
 .inputs-container::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Background of the scrollbar track */
-  border-radius: 10px; /* Rounded corners for the track */
+  background: #f1f1f1;
+  border-radius: 10px;
 }
 
-/* Override for .mb-3 inside .threeInputRow */
 .three-input-row .mb-3 {
-  min-width: unset; /* Removes the min-width for this specific case */
+  min-width: unset;
 }
 .three-input-row {
   display: flex;
   justify-content: space-between;
 }
 
-/* You can still retain the specific styling for gender, first name, and last name */
 #gender {
   width: 9vw;
 }
