--- a/frontend/src/components/UserDashboard/UserFlights/searchflight.css
+++ b/frontend/src/components/UserDashboard/UserFlights/searchflight.css
@@ -36,7 +36,8 @@
   font-weight: bold;
   margin-bottom: 5px;
 }
-.datepicker{
+
+.datepicker {
   width: 100%; 
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -65,6 +66,46 @@
   color: white;
   font-weight: bold;
 }
+.radio-filters {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 10px 0;
+}
+
+.radio-item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.radio-item input[type="radio"] {
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.radio-item input[type="radio"]:checked {
+  border-color: #007bff;
+  background-color: #007bff;
+}
+
+.radio-item label {
+  cursor: pointer;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+}
+
+.radio-item input[type="radio"]:checked + label {
+  color: #007bff;
+  font-weight: bold;
+}
+
 
 .search-btn {
   margin-top: 10px;
