--- a/frontend/src/components/TicketReservationForm/style.css
+++ b/frontend/src/components/TicketReservationForm/style.css
@@ -1,6 +1,6 @@
 .inputs-container {
   margin: 0 auto;
-  padding: 20px;
+  padding: 1em 1em 1em 0;
   width: 100%;
   max-width: 800px;
   height: auto;
@@ -8,6 +8,10 @@
   overflow-y: auto;
   overflow-x: hidden;
   box-sizing: border-box;
+}
+
+.button-row .btn{
+  margin: 1em;
 }
 
 .inputs-container::-webkit-scrollbar {
@@ -66,4 +70,8 @@
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.ticket-reservation-heading{
+  margin-left: 1rem;
 }
