Integrate search flight frontend and backend

--- a/frontend/src/components/homepage/SearchFlights/style.css
+++ b/frontend/src/components/homepage/SearchFlights/style.css
@@ -33,11 +33,11 @@
   height: 4rem;
 }
 
-#passengers{
+#numberOfTickets{
   border-radius: 0 9px 9px 0;
 }
 
-#source{
+#departureAirportId{
   border-radius: 9px 0 0 9px;
 }
 
