--- a/frontend/src/components/homepage/Promotion/style.css
+++ b/frontend/src/components/homepage/Promotion/style.css
@@ -18,6 +18,9 @@
   text-align: left;
   margin: 0 10%;
   padding: 10% 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .promotion-title {
   font-size: 3.5vw;
@@ -31,6 +34,8 @@
   font-weight: 400;
   letter-spacing: 0%;
   color: var(--greyish-white);
+  margin: 0;
+  align-self: flex-start;
 }
 
 .description {
