--- a/frontend/src/components/UserDashboard/FlightLeg/FlightLeg.css
+++ b/frontend/src/components/UserDashboard/FlightLeg/FlightLeg.css
@@ -6,8 +6,10 @@
   width: 600px; 
   height: 350px; 
   color: white;
+  background: linear-gradient(360deg, #05203c, #0062e3);
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  padding: 10px;
   transition: transform 0.3s ease;
 }
 
@@ -20,6 +22,7 @@
   color: #007bff;
 }
 .card-content {
+  padding: 10px;
   position: relative;
   z-index: 2;
 }
@@ -41,6 +44,7 @@
   align-items: center;
   gap: 0.75rem; 
   padding: 1rem;
+  width: 300px;
   background: rgba(255, 255, 255, 0.08);
   border-radius: 12px;
   transition: all 0.3s ease;
@@ -55,7 +59,7 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  color: #28a745;
+  color: white;
   margin-bottom: 0;
 }
 
@@ -64,7 +68,7 @@
   height: 80px; 
   border-radius: 50%;
   object-fit: cover;
-  border: 3px solid #28a745;
+  border: 3px solid white;
 }
 
 .airport-details {
@@ -74,9 +78,9 @@
 .airport-code {
   font-size: 2rem; 
   font-weight: 700;
-  color: #28a745;
+  color: white;
   margin-bottom: 0.5rem;
-  text-shadow: 0 0 10px rgba(0, 255, 60, 0.3);
+  text-shadow: 0 0 10px rgba(245, 245, 245, 0.3);
 }
 
 .airport-location {
