--- a/frontend/src/components/UserDashboard/UserFlights/userflight.css
+++ b/frontend/src/components/UserDashboard/UserFlights/userflight.css
@@ -1,14 +1,13 @@
-.flight-card {
+.search-flight-card {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  background: #fff;
+  background: #ffffff;
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 15px auto;
-  max-width: 700px;
+  width: 500px;
   font-family: Arial, sans-serif;
 }
 
@@ -16,7 +15,7 @@
   text-align: center;
 }
 
-.flight-section .icon {
+.flight-section .user-flight-icon {
   font-size: 24px;
   color: #007bff;
   margin-bottom: 5px;
@@ -24,6 +23,7 @@
 
 .flight-middle {
   text-align: center;
+  width: 100px;
 }
 
 .duration {
@@ -42,13 +42,15 @@
 }
 
 .price-section h3 {
-  color: #28a745;
+  color: #05203c;
   font-size: 18px;
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
 }
 
 .book-button {
-  background-color: #28a745;
+  background-color: #05203c;
   color: white;
   border: none;
   border-radius: 5px;
@@ -57,7 +59,7 @@
 }
 
 .book-button:hover {
-  background-color: #218838;
+  background-color: #007bff;
 }
 
 .details-link {
@@ -76,4 +78,5 @@
 .date {
   font-size: 12px;
   color: #555;
+  margin-right: 30px;
 }
