--- a/frontend/src/components/homepage/SearchFlights/style.css
+++ b/frontend/src/components/homepage/SearchFlights/style.css
@@ -1,60 +1,49 @@
-.search-flights-container {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--navy-blue);
-    margin: auto;
-    width: 70vw;
-    height: auto; 
-    border-radius: 9px;
-    padding: 1rem 2rem;
-    box-sizing: border-box; 
+.search-flights-container { 
+  display: flex; 
+  flex-direction: column; 
+  background-color: var(--navy-blue); 
+  margin: auto; 
+  width: 70vw; 
+  height: 20vh; 
+  border-radius: 9px; 
+  padding: 1rem 1rem 1rem 2rem; 
 }
 
-.trip-type-container,
-.class-container {
-    color: var(--greyish-white);
-    padding-left: 3rem;
-    margin-bottom: 0.5rem; 
+.trip-type-container, .class-container { 
+  color: var(--greyish-white); 
+  padding-left: 3rem; 
 }
 
-.search-flights-container .mb-3 {
-    width: 100%; 
-    max-width: 17%; 
-    padding: 0.1em;
-    box-sizing: border-box;
+.search-flights-container .mb-3 { 
+  width: 17%; 
+  padding: 0.1em; 
 }
 
-.search-flights-container .form-select,
-.search-flights-container .form-control {
-    height: 4rem;
-    margin: 0;
-    border-radius: 0;
-    font-size: 1rem;
+.search-flights-container .form-select, 
+.search-flights-container .form-control { 
+  height: 5rem; 
+  margin: 0; 
+  border-radius: 0; 
 }
 
-.search-flights-container .btn {
-    width: 100%; 
-    max-width: 13%;
-    margin-top: 2rem;
-    height: 4rem;
+.search-flights-container .btn { 
+  width: 13%; 
+  height: 4rem; 
 }
 
-#numberOfTickets{
-    border-radius: 0 9px 9px 0;
+#numberOfTickets { 
+  border-radius: 0 9px 9px 0; 
 }
 
-#departureAirportId{
-    border-radius: 9px 0 0 9px;
+#departureAirportId { 
+  border-radius: 9px 0 0 9px; 
 }
 
-.search-flights-container ::placeholder{
-    color: black;
+.search-flights-container ::placeholder { 
+  color: black; 
 }
 
-#arrivalDate:disabled {
-    background-color: var(--greyish-white);
-    cursor: not-allowed;
-}
-.row2{
-  padding: 2rem;
+#arrivalDate:disabled { 
+  background-color: var(--greyish-white); 
+  cursor: not-allowed; 
 }
