--- a/frontend/src/pages/UserDashboard/flightdisplay.css
+++ b/frontend/src/pages/UserDashboard/flightdisplay.css
@@ -8,11 +8,11 @@
   display: flex;
   animation: fadeIn 0.3s ease;
 }
-.card-buttons{
+.card-buttons {
   display: flex;
   align-items: center;
   gap: 50px;
-  justify-content: center; 
+  justify-content: center;
 }
 .modal-content {
   background: #fff;
@@ -23,12 +23,14 @@
   position: relative;
   padding: 2rem;
   animation: slideUp 0.4s ease;
-  margin: 0 1rem; 
+  margin: 0 1rem;
 }
-.departure-date{
+.departure-date {
   margin-left: 120px;
   margin-right: 80px;
   display: flex;
+  justify-content: center;
+  margin: auto;
   flex-direction: row;
 }
 .modal-title {
@@ -111,7 +113,7 @@ input,
   background-color: #e84118;
 }
 
-.after-search-filter-button{
+.after-search-filter-button {
   width: 50px;
   height: 50px;
   border-radius: 1rem;
@@ -122,10 +124,12 @@ input,
 .after-search-flight-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px; 
+  gap: 20px;
   margin-left: 150px;
   margin-right: 150px;
   justify-content: space-between;
+  margin: auto;
+  width: 80vw;
 }
 
 .no-flights-card {
@@ -135,3 +139,20 @@ input,
   align-items: center;
   width: 100%;
 }
+/*
+.search-flight-card {
+  text-align: center;
+  padding: 2rem;
+  height: auto;
+  width: 60vw;
+} */
+
+/* .book-button{
+  padding: 1rem 4rem 1rem 4rem;
+} */
+
+/* .flight-display .price-section h3{
+  display: flex;
+  justify-self: center;
+  margin: 1rem;
+} */
